clean a bit